# dat-archive

./: Archive File Spec.md  CMakeLists.txt  README.md
examples/test/: CMakeLists.txt  main.cpp
include/: dat-archive.h
source/: dat-archive.cpp
